// Jest Snapshot v1

exports[`.toBe() does not crash on circular references 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32m{}[39m
Received:
  [31m{\\"circular\\": [Circular]}[39m

Difference:

[32m- Expected[39m
[31m+ Received[39m

[32m-Object {}[39m
[31m+Object {[39m
[31m+  \\"circular\\": [Circular],[39m
[31m+}[39m"
`;

exports[`.toBe() fails for '"a"' with '.not' 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBe([22m[32mexpected[39m[2m)[22m

Expected value to not be (using ===):
  [32m\\"a\\"[39m
Received:
  [31m\\"a\\"[39m"
`;

exports[`.toBe() fails for '{}' with '.not' 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBe([22m[32mexpected[39m[2m)[22m

Expected value to not be (using ===):
  [32m{}[39m
Received:
  [31m{}[39m"
`;

exports[`.toBe() fails for '1' with '.not' 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBe([22m[32mexpected[39m[2m)[22m

Expected value to not be (using ===):
  [32m1[39m
Received:
  [31m1[39m"
`;

exports[`.toBe() fails for 'Array []' with '.not' 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBe([22m[32mexpected[39m[2m)[22m

Expected value to not be (using ===):
  [32mArray [][39m
Received:
  [31mArray [][39m"
`;

exports[`.toBe() fails for 'false' with '.not' 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBe([22m[32mexpected[39m[2m)[22m

Expected value to not be (using ===):
  [32mfalse[39m
Received:
  [31mfalse[39m"
`;

exports[`.toBe() fails for 'null' with '.not' 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBe([22m[32mexpected[39m[2m)[22m

Expected value to not be (using ===):
  [32mnull[39m
Received:
  [31mnull[39m"
`;

exports[`.toBe() fails for 'undefined' with '.not' 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBe([22m[32mexpected[39m[2m)[22m

Expected value to not be (using ===):
  [32mundefined[39m
Received:
  [31mundefined[39m"
`;

exports[`.toBe() fails for: "abc" and "cde" 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32m\\"cde\\"[39m
Received:
  [31m\\"abc\\"[39m"
`;

exports[`.toBe() fails for: {"a": 1} and {"a": 1} 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32m{\\"a\\": 1}[39m
Received:
  [31m{\\"a\\": 1}[39m

Difference:

[2mCompared values have no visual difference.[22m"
`;

exports[`.toBe() fails for: {"a": 1} and {"a": 5} 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32m{\\"a\\": 5}[39m
Received:
  [31m{\\"a\\": 1}[39m

Difference:

[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": 5,[39m
[31m+  \\"a\\": 1,[39m
[2m }[22m"
`;

exports[`.toBe() fails for: {} and {} 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32m{}[39m
Received:
  [31m{}[39m

Difference:

[2mCompared values have no visual difference.[22m"
`;

exports[`.toBe() fails for: 1 and 2 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32m2[39m
Received:
  [31m1[39m"
`;

exports[`.toBe() fails for: Array [] and Array [] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32mArray [][39m
Received:
  [31mArray [][39m

Difference:

[2mCompared values have no visual difference.[22m"
`;

exports[`.toBe() fails for: null and undefined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32mundefined[39m
Received:
  [31mnull[39m

Difference:

  Comparing two different types of values. Expected [32mundefined[39m but received [31mnull[39m."
`;

exports[`.toBe() fails for: true and false 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBe([22m[32mexpected[39m[2m)[22m

Expected value to be (using ===):
  [32mfalse[39m
Received:
  [31mtrue[39m"
`;

exports[`.toBeCloseTo() accepts an optional precision argument: [0, 0.000004, 5] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m5[39m-digit precision):
  [32m0.000004[39m
Received:
  [31m0[39m"
`;

exports[`.toBeCloseTo() accepts an optional precision argument: [0, 0.0001, 3] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m3[39m-digit precision):
  [32m0.0001[39m
Received:
  [31m0[39m"
`;

exports[`.toBeCloseTo() accepts an optional precision argument: [0, 0.1, 0] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m0[39m-digit precision):
  [32m0.1[39m
Received:
  [31m0[39m"
`;

exports[`.toBeCloseTo() passes: [0, 0.001] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m2[39m-digit precision):
  [32m0.001[39m
Received:
  [31m0[39m"
`;

exports[`.toBeCloseTo() passes: [0, 0] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m2[39m-digit precision):
  [32m0[39m
Received:
  [31m0[39m"
`;

exports[`.toBeCloseTo() passes: [1.23, 1.225] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m2[39m-digit precision):
  [32m1.225[39m
Received:
  [31m1.23[39m"
`;

exports[`.toBeCloseTo() passes: [1.23, 1.226] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m2[39m-digit precision):
  [32m1.226[39m
Received:
  [31m1.23[39m"
`;

exports[`.toBeCloseTo() passes: [1.23, 1.229] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m2[39m-digit precision):
  [32m1.229[39m
Received:
  [31m1.23[39m"
`;

exports[`.toBeCloseTo() passes: [1.23, 1.234] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value not to be close to (with [32m2[39m-digit precision):
  [32m1.234[39m
Received:
  [31m1.23[39m"
`;

exports[`.toBeCloseTo() throws: [0, 0.01] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value to be close to (with [32m2[39m-digit precision):
  [32m0.01[39m
Received:
  [31m0[39m"
`;

exports[`.toBeCloseTo() throws: [1, 1.23] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value to be close to (with [32m2[39m-digit precision):
  [32m1.23[39m
Received:
  [31m1[39m"
`;

exports[`.toBeCloseTo() throws: [1.23, 1.2249999] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeCloseTo([22m[32mexpected, precision[39m[2m)[22m

Expected value to be close to (with [32m2[39m-digit precision):
  [32m1.2249999[39m
Received:
  [31m1.23[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '"a"' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31m\\"a\\"[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '"a"' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31m\\"a\\"[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '[Function anonymous]' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31m[Function anonymous][39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '[Function anonymous]' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31m[Function anonymous][39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '{}' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31m{}[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '{}' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31m{}[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '0.5' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31m0.5[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '0.5' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31m0.5[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '1' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31m1[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() '1' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31m1[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() 'Array []' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31mArray [][39m"
`;

exports[`.toBeDefined(), .toBeUndefined() 'Array []' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31mArray [][39m"
`;

exports[`.toBeDefined(), .toBeUndefined() 'Infinity' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31mInfinity[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() 'Infinity' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31mInfinity[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() 'Map {}' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31mMap {}[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() 'Map {}' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31mMap {}[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() 'true' is defined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeDefined([22m[2m)[22m

Expected value not to be defined, instead received
  [31mtrue[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() 'true' is defined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeUndefined([22m[2m)[22m

Expected value to be undefined, instead received
  [31mtrue[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() undefined is undefined 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeDefined([22m[2m)[22m

Expected value to be defined, instead received
  [31mundefined[39m"
`;

exports[`.toBeDefined(), .toBeUndefined() undefined is undefined 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeUndefined([22m[2m)[22m

Expected value not to be undefined, instead received
  [31mundefined[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [-Infinity, -Infinity] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m-Infinity[39m
Received:
  [31m-Infinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [-Infinity, -Infinity] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m-Infinity[39m
Received:
  [31m-Infinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [1, 1] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m1[39m
Received:
  [31m1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [1, 1] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m1[39m
Received:
  [31m1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [1.7976931348623157e+308, 1.7976931348623157e+308] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m1.7976931348623157e+308[39m
Received:
  [31m1.7976931348623157e+308[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [1.7976931348623157e+308, 1.7976931348623157e+308] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m1.7976931348623157e+308[39m
Received:
  [31m1.7976931348623157e+308[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [5e-324, 5e-324] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m5e-324[39m
Received:
  [31m5e-324[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [5e-324, 5e-324] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m5e-324[39m
Received:
  [31m5e-324[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [Infinity, Infinity] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32mInfinity[39m
Received:
  [31mInfinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() equal numbers: [Infinity, Infinity] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32mInfinity[39m
Received:
  [31mInfinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [-Infinity, Infinity] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value to be greater than:
  [32mInfinity[39m
Received:
  [31m-Infinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [-Infinity, Infinity] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value not to be less than:
  [32mInfinity[39m
Received:
  [31m-Infinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [-Infinity, Infinity] 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than:
  [32m-Infinity[39m
Received:
  [31mInfinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [-Infinity, Infinity] 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value to be less than:
  [32m-Infinity[39m
Received:
  [31mInfinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [-Infinity, Infinity] 5`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be greater than or equal:
  [32mInfinity[39m
Received:
  [31m-Infinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [-Infinity, Infinity] 6`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32mInfinity[39m
Received:
  [31m-Infinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [-Infinity, Infinity] 7`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m-Infinity[39m
Received:
  [31mInfinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [-Infinity, Infinity] 8`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be less than or equal:
  [32m-Infinity[39m
Received:
  [31mInfinity[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [0.1, 0.2] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value to be greater than:
  [32m0.2[39m
Received:
  [31m0.1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [0.1, 0.2] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value not to be less than:
  [32m0.2[39m
Received:
  [31m0.1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [0.1, 0.2] 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than:
  [32m0.1[39m
Received:
  [31m0.2[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [0.1, 0.2] 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value to be less than:
  [32m0.1[39m
Received:
  [31m0.2[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [0.1, 0.2] 5`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be greater than or equal:
  [32m0.2[39m
Received:
  [31m0.1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [0.1, 0.2] 6`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m0.2[39m
Received:
  [31m0.1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [0.1, 0.2] 7`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m0.1[39m
Received:
  [31m0.2[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [0.1, 0.2] 8`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be less than or equal:
  [32m0.1[39m
Received:
  [31m0.2[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [1, 2] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value to be greater than:
  [32m2[39m
Received:
  [31m1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [1, 2] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value not to be less than:
  [32m2[39m
Received:
  [31m1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [1, 2] 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than:
  [32m1[39m
Received:
  [31m2[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [1, 2] 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value to be less than:
  [32m1[39m
Received:
  [31m2[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [1, 2] 5`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be greater than or equal:
  [32m2[39m
Received:
  [31m1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [1, 2] 6`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m2[39m
Received:
  [31m1[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [1, 2] 7`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m1[39m
Received:
  [31m2[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [1, 2] 8`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be less than or equal:
  [32m1[39m
Received:
  [31m2[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [3, 7] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value to be greater than:
  [32m7[39m
Received:
  [31m3[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [3, 7] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value not to be less than:
  [32m7[39m
Received:
  [31m3[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [3, 7] 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than:
  [32m3[39m
Received:
  [31m7[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [3, 7] 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value to be less than:
  [32m3[39m
Received:
  [31m7[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [3, 7] 5`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be greater than or equal:
  [32m7[39m
Received:
  [31m3[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [3, 7] 6`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m7[39m
Received:
  [31m3[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [3, 7] 7`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m3[39m
Received:
  [31m7[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [3, 7] 8`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be less than or equal:
  [32m3[39m
Received:
  [31m7[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [5e-324, 1.7976931348623157e+308] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value to be greater than:
  [32m1.7976931348623157e+308[39m
Received:
  [31m5e-324[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [5e-324, 1.7976931348623157e+308] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value not to be less than:
  [32m1.7976931348623157e+308[39m
Received:
  [31m5e-324[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [5e-324, 1.7976931348623157e+308] 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than:
  [32m5e-324[39m
Received:
  [31m1.7976931348623157e+308[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [5e-324, 1.7976931348623157e+308] 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value to be less than:
  [32m5e-324[39m
Received:
  [31m1.7976931348623157e+308[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [5e-324, 1.7976931348623157e+308] 5`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be greater than or equal:
  [32m1.7976931348623157e+308[39m
Received:
  [31m5e-324[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [5e-324, 1.7976931348623157e+308] 6`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m1.7976931348623157e+308[39m
Received:
  [31m5e-324[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [5e-324, 1.7976931348623157e+308] 7`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m5e-324[39m
Received:
  [31m1.7976931348623157e+308[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [5e-324, 1.7976931348623157e+308] 8`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be less than or equal:
  [32m5e-324[39m
Received:
  [31m1.7976931348623157e+308[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [9, 18] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value to be greater than:
  [32m18[39m
Received:
  [31m9[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [9, 18] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value not to be less than:
  [32m18[39m
Received:
  [31m9[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [9, 18] 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than:
  [32m9[39m
Received:
  [31m18[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [9, 18] 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value to be less than:
  [32m9[39m
Received:
  [31m18[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [9, 18] 5`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be greater than or equal:
  [32m18[39m
Received:
  [31m9[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [9, 18] 6`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m18[39m
Received:
  [31m9[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [9, 18] 7`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m9[39m
Received:
  [31m18[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [9, 18] 8`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be less than or equal:
  [32m9[39m
Received:
  [31m18[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [17, 34] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value to be greater than:
  [32m34[39m
Received:
  [31m17[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [17, 34] 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value not to be less than:
  [32m34[39m
Received:
  [31m17[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [17, 34] 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThan([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than:
  [32m17[39m
Received:
  [31m34[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [17, 34] 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThan([22m[32mexpected[39m[2m)[22m

Expected value to be less than:
  [32m17[39m
Received:
  [31m34[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [17, 34] 5`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be greater than or equal:
  [32m34[39m
Received:
  [31m17[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [17, 34] 6`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be less than or equal:
  [32m34[39m
Received:
  [31m17[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [17, 34] 7`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeGreaterThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value not to be greater than or equal:
  [32m17[39m
Received:
  [31m34[39m"
`;

exports[`.toBeGreaterThan(), .toBeLessThan(), .toBeGreaterThanOrEqual(), .toBeLessThanOrEqual() throws: [17, 34] 8`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeLessThanOrEqual([22m[32mexpected[39m[2m)[22m

Expected value to be less than or equal:
  [32m17[39m
Received:
  [31m34[39m"
`;

exports[`.toBeInstanceOf() failing "a" and [Function String] 1`] = `
"[2mexpect([22m[31mvalue[39m[2m).toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected value to be an instance of:
  [32m\\"String\\"[39m
Received:
  [31m\\"a\\"[39m
Constructor:
  [31m\\"String\\"[39m"
`;

exports[`.toBeInstanceOf() failing {} and [Function A] 1`] = `
"[2mexpect([22m[31mvalue[39m[2m).toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected value to be an instance of:
  [32m\\"A\\"[39m
Received:
  [31m{}[39m
Constructor:
  [31mundefined[39m"
`;

exports[`.toBeInstanceOf() failing {} and [Function B] 1`] = `
"[2mexpect([22m[31mvalue[39m[2m).toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected value to be an instance of:
  [32m\\"B\\"[39m
Received:
  [31m{}[39m
Constructor:
  [31m\\"A\\"[39m"
`;

exports[`.toBeInstanceOf() failing 1 and [Function Number] 1`] = `
"[2mexpect([22m[31mvalue[39m[2m).toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected value to be an instance of:
  [32m\\"Number\\"[39m
Received:
  [31m1[39m
Constructor:
  [31m\\"Number\\"[39m"
`;

exports[`.toBeInstanceOf() failing true and [Function Boolean] 1`] = `
"[2mexpect([22m[31mvalue[39m[2m).toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected value to be an instance of:
  [32m\\"Boolean\\"[39m
Received:
  [31mtrue[39m
Constructor:
  [31m\\"Boolean\\"[39m"
`;

exports[`.toBeInstanceOf() passing {} and [Function A] 1`] = `
"[2mexpect([22m[31mvalue[39m[2m).not.toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected value not to be an instance of:
  [32m\\"A\\"[39m
Received:
  [31m{}[39m
"
`;

exports[`.toBeInstanceOf() passing Array [] and [Function Array] 1`] = `
"[2mexpect([22m[31mvalue[39m[2m).not.toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected value not to be an instance of:
  [32m\\"Array\\"[39m
Received:
  [31mArray [][39m
"
`;

exports[`.toBeInstanceOf() passing Map {} and [Function Map] 1`] = `
"[2mexpect([22m[31mvalue[39m[2m).not.toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected value not to be an instance of:
  [32m\\"Map\\"[39m
Received:
  [31mMap {}[39m
"
`;

exports[`.toBeInstanceOf() throws if constructor is not a function 1`] = `
"[2mexpect([22m[31mvalue[39m[2m)[.not].toBeInstanceOf([22m[32mconstructor[39m[2m)[22m

Expected constructor to be a function. Instead got:
  [32m\\"number\\"[39m"
`;

exports[`.toBeNaN() passes 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeNaN([22m[2m)[22m

Expected value not to be NaN, instead received
  [31mNaN[39m"
`;

exports[`.toBeNaN() passes 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeNaN([22m[2m)[22m

Expected value not to be NaN, instead received
  [31mNaN[39m"
`;

exports[`.toBeNaN() passes 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeNaN([22m[2m)[22m

Expected value not to be NaN, instead received
  [31mNaN[39m"
`;

exports[`.toBeNaN() passes 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeNaN([22m[2m)[22m

Expected value not to be NaN, instead received
  [31mNaN[39m"
`;

exports[`.toBeNaN() throws 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31m1[39m"
`;

exports[`.toBeNaN() throws 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31m\\"\\"[39m"
`;

exports[`.toBeNaN() throws 3`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31mnull[39m"
`;

exports[`.toBeNaN() throws 4`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31mundefined[39m"
`;

exports[`.toBeNaN() throws 5`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31m{}[39m"
`;

exports[`.toBeNaN() throws 6`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31mArray [][39m"
`;

exports[`.toBeNaN() throws 7`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31m0.2[39m"
`;

exports[`.toBeNaN() throws 8`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31m0[39m"
`;

exports[`.toBeNaN() throws 9`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31mInfinity[39m"
`;

exports[`.toBeNaN() throws 10`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNaN([22m[2m)[22m

Expected value to be NaN, instead received
  [31m-Infinity[39m"
`;

exports[`.toBeNull() fails for '"a"' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31m\\"a\\"[39m"
`;

exports[`.toBeNull() fails for '[Function anonymous]' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31m[Function anonymous][39m"
`;

exports[`.toBeNull() fails for '{}' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31m{}[39m"
`;

exports[`.toBeNull() fails for '0.5' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31m0.5[39m"
`;

exports[`.toBeNull() fails for '1' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31m1[39m"
`;

exports[`.toBeNull() fails for 'Array []' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31mArray [][39m"
`;

exports[`.toBeNull() fails for 'Infinity' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31mInfinity[39m"
`;

exports[`.toBeNull() fails for 'Map {}' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31mMap {}[39m"
`;

exports[`.toBeNull() fails for 'true' with .not 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeNull([22m[2m)[22m

Expected value to be null, instead received
  [31mtrue[39m"
`;

exports[`.toBeNull() pass for null 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeNull([22m[2m)[22m

Expected value not to be null, instead received
  [31mnull[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '""' is falsy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Expected value to be truthy, instead received
  [31m\\"\\"[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '""' is falsy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeFalsy([22m[2m)[22m

Expected value not to be falsy, instead received
  [31m\\"\\"[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '"a"' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31m\\"a\\"[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '"a"' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31m\\"a\\"[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '[Function anonymous]' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31m[Function anonymous][39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '[Function anonymous]' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31m[Function anonymous][39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '{}' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31m{}[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '{}' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31m{}[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '0' is falsy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Expected value to be truthy, instead received
  [31m0[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '0' is falsy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeFalsy([22m[2m)[22m

Expected value not to be falsy, instead received
  [31m0[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '0.5' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31m0.5[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '0.5' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31m0.5[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '1' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31m1[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() '1' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31m1[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'Array []' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31mArray [][39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'Array []' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31mArray [][39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'Infinity' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31mInfinity[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'Infinity' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31mInfinity[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'Map {}' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31mMap {}[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'Map {}' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31mMap {}[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'NaN' is falsy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Expected value to be truthy, instead received
  [31mNaN[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'NaN' is falsy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeFalsy([22m[2m)[22m

Expected value not to be falsy, instead received
  [31mNaN[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'false' is falsy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Expected value to be truthy, instead received
  [31mfalse[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'false' is falsy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeFalsy([22m[2m)[22m

Expected value not to be falsy, instead received
  [31mfalse[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'null' is falsy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Expected value to be truthy, instead received
  [31mnull[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'null' is falsy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeFalsy([22m[2m)[22m

Expected value not to be falsy, instead received
  [31mnull[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'true' is truthy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeTruthy([22m[2m)[22m

Expected value not to be truthy, instead received
  [31mtrue[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'true' is truthy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeFalsy([22m[2m)[22m

Expected value to be falsy, instead received
  [31mtrue[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'undefined' is falsy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toBeTruthy([22m[2m)[22m

Expected value to be truthy, instead received
  [31mundefined[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() 'undefined' is falsy 2`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toBeFalsy([22m[2m)[22m

Expected value not to be falsy, instead received
  [31mundefined[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() does not accept arguments 1`] = `
"[2mexpect([22m[31mreceived[39m[2m)[.not].toBeTruthy([22m[2m)[22m

Matcher does not accept any arguments.
Got: [32mnull[39m"
`;

exports[`.toBeTruthy(), .toBeFalsy() does not accept arguments 2`] = `
"[2mexpect([22m[31mreceived[39m[2m)[.not].toBeFalsy([22m[2m)[22m

Matcher does not accept any arguments.
Got: [32mnull[39m"
`;

exports[`.toContain(), .toContainEqual() '"11112111"' contains '"2"' 1`] = `
"[2mexpect([22m[31mstring[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected string:
  [31m\\"11112111\\"[39m
Not to contain value:
  [32m\\"2\\"[39m
"
`;

exports[`.toContain(), .toContainEqual() '"abcdef"' contains '"abc"' 1`] = `
"[2mexpect([22m[31mstring[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected string:
  [31m\\"abcdef\\"[39m
Not to contain value:
  [32m\\"abc\\"[39m
"
`;

exports[`.toContain(), .toContainEqual() '["a", "b", "c", "d"]' contains '"a"' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[\\"a\\", \\"b\\", \\"c\\", \\"d\\"][39m
Not to contain value:
  [32m\\"a\\"[39m
"
`;

exports[`.toContain(), .toContainEqual() '["a", "b", "c", "d"]' contains a value equal to '"a"' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContainEqual([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[\\"a\\", \\"b\\", \\"c\\", \\"d\\"][39m
Not to contain a value equal to:
  [32m\\"a\\"[39m
"
`;

exports[`.toContain(), .toContainEqual() '[{"a": "b"}, {"a": "c"}]' contains a value equal to '{"a": "b"}' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContainEqual([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[{\\"a\\": \\"b\\"}, {\\"a\\": \\"c\\"}][39m
Not to contain a value equal to:
  [32m{\\"a\\": \\"b\\"}[39m
"
`;

exports[`.toContain(), .toContainEqual() '[{"a": "b"}, {"a": "c"}]' does not contain a value equal to'{"a": "d"}' 1`] = `
"[2mexpect([22m[31marray[39m[2m).toContainEqual([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[{\\"a\\": \\"b\\"}, {\\"a\\": \\"c\\"}][39m
To contain a value equal to:
  [32m{\\"a\\": \\"d\\"}[39m"
`;

exports[`.toContain(), .toContainEqual() '[{}, Array []]' does not contain '{}' 1`] = `
"[2mexpect([22m[31marray[39m[2m).toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[{}, Array []][39m
To contain value:
  [32m{}[39m"
`;

exports[`.toContain(), .toContainEqual() '[{}, Array []]' does not contain 'Array []' 1`] = `
"[2mexpect([22m[31marray[39m[2m).toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[{}, Array []][39m
To contain value:
  [32mArray [][39m"
`;

exports[`.toContain(), .toContainEqual() '[0, 1]' contains '1' 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected object:
  [31m[0, 1][39m
Not to contain value:
  [32m1[39m
"
`;

exports[`.toContain(), .toContainEqual() '[0, 1]' contains a value equal to '1' 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toContainEqual([22m[32mvalue[39m[2m)[22m

Expected object:
  [31m[0, 1][39m
Not to contain a value equal to:
  [32m1[39m
"
`;

exports[`.toContain(), .toContainEqual() '[1, 2, 3, 4]' contains '1' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[1, 2, 3, 4][39m
Not to contain value:
  [32m1[39m
"
`;

exports[`.toContain(), .toContainEqual() '[1, 2, 3, 4]' contains a value equal to '1' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContainEqual([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[1, 2, 3, 4][39m
Not to contain a value equal to:
  [32m1[39m
"
`;

exports[`.toContain(), .toContainEqual() '[1, 2, 3]' does not contain '4' 1`] = `
"[2mexpect([22m[31marray[39m[2m).toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[1, 2, 3][39m
To contain value:
  [32m4[39m"
`;

exports[`.toContain(), .toContainEqual() '[Symbol(a)]' contains 'Symbol(a)' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[Symbol(a)][39m
Not to contain value:
  [32mSymbol(a)[39m
"
`;

exports[`.toContain(), .toContainEqual() '[Symbol(a)]' contains a value equal to 'Symbol(a)' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContainEqual([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[Symbol(a)][39m
Not to contain a value equal to:
  [32mSymbol(a)[39m
"
`;

exports[`.toContain(), .toContainEqual() '[null, undefined]' does not contain '1' 1`] = `
"[2mexpect([22m[31marray[39m[2m).toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[null, undefined][39m
To contain value:
  [32m1[39m"
`;

exports[`.toContain(), .toContainEqual() '[undefined, null]' contains 'null' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[undefined, null][39m
Not to contain value:
  [32mnull[39m
"
`;

exports[`.toContain(), .toContainEqual() '[undefined, null]' contains 'undefined' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[undefined, null][39m
Not to contain value:
  [32mundefined[39m
"
`;

exports[`.toContain(), .toContainEqual() '[undefined, null]' contains a value equal to 'null' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContainEqual([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[undefined, null][39m
Not to contain a value equal to:
  [32mnull[39m
"
`;

exports[`.toContain(), .toContainEqual() '[undefined, null]' contains a value equal to 'undefined' 1`] = `
"[2mexpect([22m[31marray[39m[2m).not.toContainEqual([22m[32mvalue[39m[2m)[22m

Expected array:
  [31m[undefined, null][39m
Not to contain a value equal to:
  [32mundefined[39m
"
`;

exports[`.toContain(), .toContainEqual() 'Set {"abc", "def"}' contains '"abc"' 1`] = `
"[2mexpect([22m[31mset[39m[2m).not.toContain([22m[32mvalue[39m[2m)[22m

Expected set:
  [31mSet {\\"abc\\", \\"def\\"}[39m
Not to contain value:
  [32m\\"abc\\"[39m
"
`;

exports[`.toContain(), .toContainEqual() 'Set {1, 2, 3, 4}' contains a value equal to '1' 1`] = `
"[2mexpect([22m[31mset[39m[2m).not.toContainEqual([22m[32mvalue[39m[2m)[22m

Expected set:
  [31mSet {1, 2, 3, 4}[39m
Not to contain a value equal to:
  [32m1[39m
"
`;

exports[`.toContain(), .toContainEqual() error cases 1`] = `
"[2mexpect([22m[31mcollection[39m[2m)[.not].toContainEqual([22m[32mvalue[39m[2m)[22m

Expected [31mcollection[39m to be an array-like structure.
Received: [31mnull[39m"
`;

exports[`.toContain(), .toContainEqual() error cases for toContainEqual 1`] = `
"[2mexpect([22m[31mcollection[39m[2m)[.not].toContainEqual([22m[32mvalue[39m[2m)[22m

Expected [31mcollection[39m to be an array-like structure.
Received: [31mnull[39m"
`;

exports[`.toEqual() expect("Alice").not.toEqual({"asymmetricMatch": [Function asymmetricMatch]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32m{\\"asymmetricMatch\\": [Function asymmetricMatch]}[39m
Received:
  [31m\\"Alice\\"[39m"
`;

exports[`.toEqual() expect("Eve").toEqual({"asymmetricMatch": [Function asymmetricMatch]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32m{\\"asymmetricMatch\\": [Function asymmetricMatch]}[39m
Received:
  [31m\\"Eve\\"[39m"
`;

exports[`.toEqual() expect("abc").not.toEqual("abc") 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32m\\"abc\\"[39m
Received:
  [31m\\"abc\\"[39m"
`;

exports[`.toEqual() expect("abcd").not.toEqual(StringContaining "bc") 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32mStringContaining \\"bc\\"[39m
Received:
  [31m\\"abcd\\"[39m"
`;

exports[`.toEqual() expect("abcd").not.toEqual(StringMatching /bc/) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32mStringMatching /bc/[39m
Received:
  [31m\\"abcd\\"[39m"
`;

exports[`.toEqual() expect("abd").toEqual(StringContaining "bc") 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mStringContaining \\"bc\\"[39m
Received:
  [31m\\"abd\\"[39m"
`;

exports[`.toEqual() expect("abd").toEqual(StringMatching /bc/i) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mStringMatching /bc/i[39m
Received:
  [31m\\"abd\\"[39m"
`;

exports[`.toEqual() expect("banana").toEqual("apple") 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32m\\"apple\\"[39m
Received:
  [31m\\"banana\\"[39m"
`;

exports[`.toEqual() expect([1, 2, 3]).not.toEqual(ArrayContaining [2, 3]) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32mArrayContaining [2, 3][39m
Received:
  [31m[1, 2, 3][39m"
`;

exports[`.toEqual() expect([1, 3]).toEqual(ArrayContaining [1, 2]) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mArrayContaining [1, 2][39m
Received:
  [31m[1, 3][39m

Difference:

[32m- Expected[39m
[31m+ Received[39m

[32m-ArrayContaining [[39m
[31m+Array [[39m
[2m   1,[22m
[32m-  2,[39m
[31m+  3,[39m
[2m ][22m"
`;

exports[`.toEqual() expect([Function anonymous]).not.toEqual(Any<Function>) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32mAny<Function>[39m
Received:
  [31m[Function anonymous][39m"
`;

exports[`.toEqual() expect({"a": 1, "b": [Function b], "c": true}).not.toEqual({"a": 1, "b": Any<Function>, "c": Anything}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32m{\\"a\\": 1, \\"b\\": Any<Function>, \\"c\\": Anything}[39m
Received:
  [31m{\\"a\\": 1, \\"b\\": [Function b], \\"c\\": true}[39m"
`;

exports[`.toEqual() expect({"a": 1, "b": 2}).not.toEqual(ObjectContaining {"a": 1}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32mObjectContaining {\\"a\\": 1}[39m
Received:
  [31m{\\"a\\": 1, \\"b\\": 2}[39m"
`;

exports[`.toEqual() expect({"a": 1, "b": 2}).toEqual(ObjectContaining {"a": 2}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mObjectContaining {\\"a\\": 2}[39m
Received:
  [31m{\\"a\\": 1, \\"b\\": 2}[39m

Difference:

[32m- Expected[39m
[31m+ Received[39m

[32m-ObjectContaining {[39m
[32m-  \\"a\\": 2,[39m
[31m+Object {[39m
[31m+  \\"a\\": 1,[39m
[31m+  \\"b\\": 2,[39m
[2m }[22m"
`;

exports[`.toEqual() expect({"a": 5}).toEqual({"b": 6}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32m{\\"b\\": 6}[39m
Received:
  [31m{\\"a\\": 5}[39m

Difference:

[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"b\\": 6,[39m
[31m+  \\"a\\": 5,[39m
[2m }[22m"
`;

exports[`.toEqual() expect({"a": 99}).not.toEqual({"a": 99}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32m{\\"a\\": 99}[39m
Received:
  [31m{\\"a\\": 99}[39m"
`;

exports[`.toEqual() expect(0).toEqual(-0) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32m-0[39m
Received:
  [31m0[39m

Difference:

[2mCompared values have no visual difference.[22m"
`;

exports[`.toEqual() expect(1).not.toEqual(1) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32m1[39m
Received:
  [31m1[39m"
`;

exports[`.toEqual() expect(1).toEqual(2) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32m2[39m
Received:
  [31m1[39m"
`;

exports[`.toEqual() expect(1).toEqual(ArrayContaining [1, 2]) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mArrayContaining [1, 2][39m
Received:
  [31m1[39m

Difference:

  Comparing two different types of values. Expected [32marray[39m but received [31mnumber[39m."
`;

exports[`.toEqual() expect(Set {1, 2}).not.toEqual(Set {1, 2}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32mSet {1, 2}[39m
Received:
  [31mSet {1, 2}[39m"
`;

exports[`.toEqual() expect(Set {1, 2}).toEqual(Set {2, 1}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mSet {2, 1}[39m
Received:
  [31mSet {1, 2}[39m

Difference:

[2mCompared values have no visual difference.[22m"
`;

exports[`.toEqual() expect(false).toEqual(ObjectContaining {"a": 2}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mObjectContaining {\\"a\\": 2}[39m
Received:
  [31mfalse[39m

Difference:

  Comparing two different types of values. Expected [32mobject[39m but received [31mboolean[39m."
`;

exports[`.toEqual() expect(null).toEqual(undefined) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mundefined[39m
Received:
  [31mnull[39m

Difference:

  Comparing two different types of values. Expected [32mundefined[39m but received [31mnull[39m."
`;

exports[`.toEqual() expect(true).not.toEqual(Anything) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32mAnything[39m
Received:
  [31mtrue[39m"
`;

exports[`.toEqual() expect(true).not.toEqual(true) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toEqual([22m[32mexpected[39m[2m)[22m

Expected value to not equal:
  [32mtrue[39m
Received:
  [31mtrue[39m"
`;

exports[`.toEqual() expect(true).toEqual(false) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mfalse[39m
Received:
  [31mtrue[39m"
`;

exports[`.toEqual() expect(undefined).toEqual(Any<Function>) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mAny<Function>[39m
Received:
  [31mundefined[39m

Difference:

  Comparing two different types of values. Expected [32mfunction[39m but received [31mundefined[39m."
`;

exports[`.toEqual() expect(undefined).toEqual(Anything) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32mAnything[39m
Received:
  [31mundefined[39m"
`;

exports[`.toHaveLength error cases 1`] = `
"[2mexpect([22m[31mreceived[39m[2m)[.not].toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to have a 'length' property that is a number. Received:
  [31m{\\"a\\": 9}[39m
received.length:
  [31mundefined[39m"
`;

exports[`.toHaveLength error cases 2`] = `
"[2mexpect([22m[31mreceived[39m[2m)[.not].toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to have a 'length' property that is a number. Received:
  [31m0[39m
"
`;

exports[`.toHaveLength error cases 3`] = `
"[2mexpect([22m[31mreceived[39m[2m)[.not].toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to have a 'length' property that is a number. Received:
  [31mundefined[39m
"
`;

exports[`.toHaveLength expect("").toHaveLength(0) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to not have length:
  [32m0[39m
Received:
  [31m\\"\\"[39m
received.length:
  [31m0[39m"
`;

exports[`.toHaveLength expect("").toHaveLength(1) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to have length:
  [32m1[39m
Received:
  [31m\\"\\"[39m
received.length:
  [31m0[39m"
`;

exports[`.toHaveLength expect("abc").toHaveLength(3) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to not have length:
  [32m3[39m
Received:
  [31m\\"abc\\"[39m
received.length:
  [31m3[39m"
`;

exports[`.toHaveLength expect("abc").toHaveLength(66) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to have length:
  [32m66[39m
Received:
  [31m\\"abc\\"[39m
received.length:
  [31m3[39m"
`;

exports[`.toHaveLength expect(["a", "b"]).toHaveLength(2) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to not have length:
  [32m2[39m
Received:
  [31m[\\"a\\", \\"b\\"][39m
received.length:
  [31m2[39m"
`;

exports[`.toHaveLength expect(["a", "b"]).toHaveLength(99) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to have length:
  [32m99[39m
Received:
  [31m[\\"a\\", \\"b\\"][39m
received.length:
  [31m2[39m"
`;

exports[`.toHaveLength expect([1, 2]).toHaveLength(2) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to not have length:
  [32m2[39m
Received:
  [31m[1, 2][39m
received.length:
  [31m2[39m"
`;

exports[`.toHaveLength expect([1, 2]).toHaveLength(3) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to have length:
  [32m3[39m
Received:
  [31m[1, 2][39m
received.length:
  [31m2[39m"
`;

exports[`.toHaveLength expect(Array []).toHaveLength(0) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to not have length:
  [32m0[39m
Received:
  [31mArray [][39m
received.length:
  [31m0[39m"
`;

exports[`.toHaveLength expect(Array []).toHaveLength(1) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toHaveLength([22m[32mlength[39m[2m)[22m

Expected value to have length:
  [32m1[39m
Received:
  [31mArray [][39m
received.length:
  [31m0[39m"
`;

exports[`.toHaveProperty() {error} expect({"a": {"b": {}}}).toHaveProperty('1') 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toHaveProperty([22m[32mpath[39m[2m)[22m

Expected [32mpath[39m to be a string. Received:
  number: [31m1[39m"
`;

exports[`.toHaveProperty() {error} expect({"a": {"b": {}}}).toHaveProperty('null') 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toHaveProperty([22m[32mpath[39m[2m)[22m

Expected [32mpath[39m to be a string. Received:
  null: [31mnull[39m"
`;

exports[`.toHaveProperty() {error} expect({"a": {"b": {}}}).toHaveProperty('undefined') 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toHaveProperty([22m[32mpath[39m[2m)[22m

Expected [32mpath[39m to be a string. Received:
  undefined: [31mundefined[39m"
`;

exports[`.toHaveProperty() {error} expect(null).toHaveProperty('a.b') 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toHaveProperty([22m[32mpath[39m[2m)[22m

Expected [31mobject[39m to be an object. Received:
  null: [31mnull[39m"
`;

exports[`.toHaveProperty() {error} expect(undefined).toHaveProperty('a') 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toHaveProperty([22m[32mpath[39m[2m)[22m

Expected [31mobject[39m to be an object. Received:
  undefined: [31mundefined[39m"
`;

exports[`.toHaveProperty() {pass: false} expect("abc").toHaveProperty('a.b.c') 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m[2m)[22m

Expected the object:
  [31m\\"abc\\"[39m
To have a nested property:
  [32m\\"a.b.c\\"[39m
"
`;

exports[`.toHaveProperty() {pass: false} expect("abc").toHaveProperty('a.b.c', {"a": 5}) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m\\"abc\\"[39m
To have a nested property:
  [32m\\"a.b.c\\"[39m
With a value of:
  [32m{\\"a\\": 5}[39m
"
`;

exports[`.toHaveProperty() {pass: false} expect({"a": {"b": {"c": {"d": 1}}}}).toHaveProperty('a.b.c.d', 2) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": {\\"c\\": {\\"d\\": 1}}}}[39m
To have a nested property:
  [32m\\"a.b.c.d\\"[39m
With a value of:
  [32m2[39m
Received:
  [31mobject[39m.a.b.c: [31m{\\"d\\": 1}[39m"
`;

exports[`.toHaveProperty() {pass: false} expect({"a": {"b": {"c": {"d": 1}}}}).toHaveProperty('a.b.ttt.d', 1) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": {\\"c\\": {\\"d\\": 1}}}}[39m
To have a nested property:
  [32m\\"a.b.ttt.d\\"[39m
With a value of:
  [32m1[39m
Received:
  [31mobject[39m.a.b: [31m{\\"c\\": {\\"d\\": 1}}[39m"
`;

exports[`.toHaveProperty() {pass: false} expect({"a": {"b": {"c": {}}}}).toHaveProperty('a.b.c.d') 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": {\\"c\\": {}}}}[39m
To have a nested property:
  [32m\\"a.b.c.d\\"[39m
Received:
  [31mobject[39m.a.b.c: [31m{}[39m"
`;

exports[`.toHaveProperty() {pass: false} expect({"a": {"b": {"c": {}}}}).toHaveProperty('a.b.c.d', 1) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": {\\"c\\": {}}}}[39m
To have a nested property:
  [32m\\"a.b.c.d\\"[39m
With a value of:
  [32m1[39m
Received:
  [31mobject[39m.a.b.c: [31m{}[39m"
`;

exports[`.toHaveProperty() {pass: false} expect({"a": {"b": {"c": 5}}}).toHaveProperty('a.b', {"c": 4}) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": {\\"c\\": 5}}}[39m
To have a nested property:
  [32m\\"a.b\\"[39m
With a value of:
  [32m{\\"c\\": 4}[39m
Received:
  [31mobject[39m.a: [31m{\\"b\\": {\\"c\\": 5}}[39m
Difference:

[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"c\\": 4,[39m
[31m+  \\"c\\": 5,[39m
[2m }[22m"
`;

exports[`.toHaveProperty() {pass: false} expect({"a": {"b": 3}}).toHaveProperty('a.b', undefined) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": 3}}[39m
To have a nested property:
  [32m\\"a.b\\"[39m
With a value of:
  [32mundefined[39m
Received:
  [31mobject[39m.a: [31m{\\"b\\": 3}[39m
Difference:

  Comparing two different types of values. Expected [32mundefined[39m but received [31mnumber[39m."
`;

exports[`.toHaveProperty() {pass: false} expect({"a": 1}).toHaveProperty('a.b.c.d') 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": 1}[39m
To have a nested property:
  [32m\\"a.b.c.d\\"[39m
Received:
  [31mobject[39m.a: [31m1[39m"
`;

exports[`.toHaveProperty() {pass: false} expect({"a": 1}).toHaveProperty('a.b.c.d', 5) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": 1}[39m
To have a nested property:
  [32m\\"a.b.c.d\\"[39m
With a value of:
  [32m5[39m
Received:
  [31mobject[39m.a: [31m1[39m"
`;

exports[`.toHaveProperty() {pass: false} expect({}).toHaveProperty('a') 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m[2m)[22m

Expected the object:
  [31m{}[39m
To have a nested property:
  [32m\\"a\\"[39m
"
`;

exports[`.toHaveProperty() {pass: false} expect({}).toHaveProperty('a', "test") 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{}[39m
To have a nested property:
  [32m\\"a\\"[39m
With a value of:
  [32m\\"test\\"[39m
"
`;

exports[`.toHaveProperty() {pass: false} expect(1).toHaveProperty('a.b.c') 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m[2m)[22m

Expected the object:
  [31m1[39m
To have a nested property:
  [32m\\"a.b.c\\"[39m
"
`;

exports[`.toHaveProperty() {pass: false} expect(1).toHaveProperty('a.b.c', "test") 1`] = `
"[2mexpect([22m[31mobject[39m[2m).toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m1[39m
To have a nested property:
  [32m\\"a.b.c\\"[39m
With a value of:
  [32m\\"test\\"[39m
"
`;

exports[`.toHaveProperty() {pass: true} expect({"a": {"b": {"c": {"d": 1}}}}).toHaveProperty('a.b.c.d')' 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toHaveProperty([22m[32mpath[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": {\\"c\\": {\\"d\\": 1}}}}[39m
Not to have a nested property:
  [32m\\"a.b.c.d\\"[39m
"
`;

exports[`.toHaveProperty() {pass: true} expect({"a": {"b": {"c": {"d": 1}}}}).toHaveProperty('a.b.c.d', 1) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": {\\"c\\": {\\"d\\": 1}}}}[39m
Not to have a nested property:
  [32m\\"a.b.c.d\\"[39m
With a value of:
  [32m1[39m
"
`;

exports[`.toHaveProperty() {pass: true} expect({"a": {"b": {"c": 5}}}).toHaveProperty('a.b', {"c": 5}) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": {\\"c\\": 5}}}[39m
Not to have a nested property:
  [32m\\"a.b\\"[39m
With a value of:
  [32m{\\"c\\": 5}[39m
"
`;

exports[`.toHaveProperty() {pass: true} expect({"a": {"b": undefined}}).toHaveProperty('a.b')' 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toHaveProperty([22m[32mpath[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": undefined}}[39m
Not to have a nested property:
  [32m\\"a.b\\"[39m
"
`;

exports[`.toHaveProperty() {pass: true} expect({"a": {"b": undefined}}).toHaveProperty('a.b', undefined) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": {\\"b\\": undefined}}[39m
Not to have a nested property:
  [32m\\"a.b\\"[39m
With a value of:
  [32mundefined[39m
"
`;

exports[`.toHaveProperty() {pass: true} expect({"a": 0}).toHaveProperty('a')' 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toHaveProperty([22m[32mpath[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": 0}[39m
Not to have a nested property:
  [32m\\"a\\"[39m
"
`;

exports[`.toHaveProperty() {pass: true} expect({"a": 0}).toHaveProperty('a', 0) 1`] = `
"[2mexpect([22m[31mobject[39m[2m).not.toHaveProperty([22m[32mpath[39m, [32mvalue[39m[2m)[22m

Expected the object:
  [31m{\\"a\\": 0}[39m
Not to have a nested property:
  [32m\\"a\\"[39m
With a value of:
  [32m0[39m
"
`;

exports[`.toMatch() passes: [Foo bar, /^foo/i] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatch([22m[32mexpected[39m[2m)[22m

Expected value not to match:
  [32m/^foo/i[39m
Received:
  [31m\\"Foo bar\\"[39m"
`;

exports[`.toMatch() passes: [foo, foo] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatch([22m[32mexpected[39m[2m)[22m

Expected value not to match:
  [32m\\"foo\\"[39m
Received:
  [31m\\"foo\\"[39m"
`;

exports[`.toMatch() throws if non String actual value passed: [/foo/i, "foo"] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[31mstring[39m value must be a string.
Received:
  regexp: [31m/foo/i[39m"
`;

exports[`.toMatch() throws if non String actual value passed: [[Function anonymous], "foo"] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[31mstring[39m value must be a string.
Received:
  function: [31m[Function anonymous][39m"
`;

exports[`.toMatch() throws if non String actual value passed: [{}, "foo"] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[31mstring[39m value must be a string.
Received:
  object: [31m{}[39m"
`;

exports[`.toMatch() throws if non String actual value passed: [1, "foo"] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[31mstring[39m value must be a string.
Received:
  number: [31m1[39m"
`;

exports[`.toMatch() throws if non String actual value passed: [Array [], "foo"] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[31mstring[39m value must be a string.
Received:
  array: [31mArray [][39m"
`;

exports[`.toMatch() throws if non String actual value passed: [true, "foo"] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[31mstring[39m value must be a string.
Received:
  boolean: [31mtrue[39m"
`;

exports[`.toMatch() throws if non String actual value passed: [undefined, "foo"] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[31mstring[39m value must be a string.
Received: [31mundefined[39m"
`;

exports[`.toMatch() throws if non String/RegExp expected value passed: ["foo", [Function anonymous]] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be a string or a regular expression.
Expected:
  function: [32m[Function anonymous][39m"
`;

exports[`.toMatch() throws if non String/RegExp expected value passed: ["foo", {}] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be a string or a regular expression.
Expected:
  object: [32m{}[39m"
`;

exports[`.toMatch() throws if non String/RegExp expected value passed: ["foo", 1] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be a string or a regular expression.
Expected:
  number: [32m1[39m"
`;

exports[`.toMatch() throws if non String/RegExp expected value passed: ["foo", Array []] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be a string or a regular expression.
Expected:
  array: [32mArray [][39m"
`;

exports[`.toMatch() throws if non String/RegExp expected value passed: ["foo", true] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be a string or a regular expression.
Expected:
  boolean: [32mtrue[39m"
`;

exports[`.toMatch() throws if non String/RegExp expected value passed: ["foo", undefined] 1`] = `
"[2mexpect([22m[31mstring[39m[2m)[.not].toMatch([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be a string or a regular expression.
Expected: [32mundefined[39m"
`;

exports[`.toMatch() throws: [bar, /foo/] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatch([22m[32mexpected[39m[2m)[22m

Expected value to match:
  [32m/foo/[39m
Received:
  [31m\\"bar\\"[39m"
`;

exports[`.toMatch() throws: [bar, foo] 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatch([22m[32mexpected[39m[2m)[22m

Expected value to match:
  [32m\\"foo\\"[39m
Received:
  [31m\\"bar\\"[39m"
`;

exports[`toMatchObject() {pass: false} expect([0]).toMatchObject([-0]) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m[-0][39m
Received:
  [31m[0][39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Array [[22m
[32m-  -0,[39m
[31m+  0,[39m
[2m ][22m"
`;

exports[`toMatchObject() {pass: false} expect([1, 2, 3]).toMatchObject([1, 2, 2]) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m[1, 2, 2][39m
Received:
  [31m[1, 2, 3][39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Array [[22m
[2m   1,[22m
[2m   2,[22m
[32m-  2,[39m
[31m+  3,[39m
[2m ][22m"
`;

exports[`toMatchObject() {pass: false} expect([1, 2, 3]).toMatchObject([2, 3, 1]) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m[2, 3, 1][39m
Received:
  [31m[1, 2, 3][39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Array [[22m
[31m+  1,[39m
[2m   2,[22m
[2m   3,[22m
[32m-  1,[39m
[2m ][22m"
`;

exports[`toMatchObject() {pass: false} expect([1, 2]).toMatchObject([1, 3]) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m[1, 3][39m
Received:
  [31m[1, 2][39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Array [[22m
[2m   1,[22m
[32m-  3,[39m
[31m+  2,[39m
[2m ][22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": "a", "c": "d"}).toMatchObject({"a": Any<Number>}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": Any<Number>}[39m
Received:
  [31m{\\"a\\": \\"a\\", \\"c\\": \\"d\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": Any<Number>,[39m
[31m+  \\"a\\": \\"a\\",[39m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": "b", "c": "d"}).toMatchObject({"a": "b!", "c": "d"}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": \\"b!\\", \\"c\\": \\"d\\"}[39m
Received:
  [31m{\\"a\\": \\"b\\", \\"c\\": \\"d\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": \\"b!\\",[39m
[31m+  \\"a\\": \\"b\\",[39m
[2m   \\"c\\": \\"d\\",[22m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": "b", "c": "d"}).toMatchObject({"e": "b"}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"e\\": \\"b\\"}[39m
Received:
  [31m{\\"a\\": \\"b\\", \\"c\\": \\"d\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"e\\": \\"b\\",[39m
[31m+  \\"a\\": \\"b\\",[39m
[31m+  \\"c\\": \\"d\\",[39m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": "b", "t": {"x": {"r": "r"}, "z": "z"}}).toMatchObject({"a": "b", "t": {"z": [3]}}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": \\"b\\", \\"t\\": {\\"z\\": [3]}}[39m
Received:
  [31m{\\"a\\": \\"b\\", \\"t\\": {\\"x\\": {\\"r\\": \\"r\\"}, \\"z\\": \\"z\\"}}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[2m   \\"a\\": \\"b\\",[22m
[2m   \\"t\\": Object {[22m
[32m-    \\"z\\": Array [[39m
[32m-      3,[39m
[32m-    ],[39m
[31m+    \\"z\\": \\"z\\",[39m
[2m   },[22m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": "b", "t": {"x": {"r": "r"}, "z": "z"}}).toMatchObject({"t": {"l": {"r": "r"}}}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"t\\": {\\"l\\": {\\"r\\": \\"r\\"}}}[39m
Received:
  [31m{\\"a\\": \\"b\\", \\"t\\": {\\"x\\": {\\"r\\": \\"r\\"}, \\"z\\": \\"z\\"}}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[2m   \\"t\\": Object {[22m
[32m-    \\"l\\": Object {[39m
[31m+    \\"x\\": Object {[39m
[2m       \\"r\\": \\"r\\",[22m
[2m     },[22m
[31m+    \\"z\\": \\"z\\",[39m
[2m   },[22m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": [{"a": "a", "b": "b"}]}).toMatchObject({"a": [{"a": "c"}]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": [{\\"a\\": \\"c\\"}]}[39m
Received:
  [31m{\\"a\\": [{\\"a\\": \\"a\\", \\"b\\": \\"b\\"}]}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[2m   \\"a\\": Array [[22m
[2m     Object {[22m
[32m-      \\"a\\": \\"c\\",[39m
[31m+      \\"a\\": \\"a\\",[39m
[2m     },[22m
[2m   ],[22m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": [3, 4, "v"], "b": "b"}).toMatchObject({"a": ["v"]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": [\\"v\\"]}[39m
Received:
  [31m{\\"a\\": [3, 4, \\"v\\"], \\"b\\": \\"b\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[2m   \\"a\\": Array [[22m
[31m+    3,[39m
[31m+    4,[39m
[2m     \\"v\\",[22m
[2m   ],[22m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": [3, 4, 5], "b": "b"}).toMatchObject({"a": [3, 4, 5, 6]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": [3, 4, 5, 6]}[39m
Received:
  [31m{\\"a\\": [3, 4, 5], \\"b\\": \\"b\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[2m   \\"a\\": Array [[22m
[2m     3,[22m
[2m     4,[22m
[2m     5,[22m
[32m-    6,[39m
[2m   ],[22m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": [3, 4, 5], "b": "b"}).toMatchObject({"a": [3, 4]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": [3, 4]}[39m
Received:
  [31m{\\"a\\": [3, 4, 5], \\"b\\": \\"b\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[2m   \\"a\\": Array [[22m
[2m     3,[22m
[2m     4,[22m
[31m+    5,[39m
[2m   ],[22m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": [3, 4, 5], "b": "b"}).toMatchObject({"a": {"b": 4}}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": {\\"b\\": 4}}[39m
Received:
  [31m{\\"a\\": [3, 4, 5], \\"b\\": \\"b\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": Object {[39m
[32m-    \\"b\\": 4,[39m
[32m-  },[39m
[31m+  \\"a\\": Array [[39m
[31m+    3,[39m
[31m+    4,[39m
[31m+    5,[39m
[31m+  ],[39m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": [3, 4, 5], "b": "b"}).toMatchObject({"a": {"b": Any<String>}}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": {\\"b\\": Any<String>}}[39m
Received:
  [31m{\\"a\\": [3, 4, 5], \\"b\\": \\"b\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": Object {[39m
[32m-    \\"b\\": Any<String>,[39m
[32m-  },[39m
[31m+  \\"a\\": Array [[39m
[31m+    3,[39m
[31m+    4,[39m
[31m+    5,[39m
[31m+  ],[39m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": 1, "b": 1, "c": 1, "d": {"e": {"f": 555}}}).toMatchObject({"d": {"e": {"f": 222}}}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"d\\": {\\"e\\": {\\"f\\": 222}}}[39m
Received:
  [31m{\\"a\\": 1, \\"b\\": 1, \\"c\\": 1, \\"d\\": {\\"e\\": {\\"f\\": 555}}}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[2m   \\"d\\": Object {[22m
[2m     \\"e\\": Object {[22m
[32m-      \\"f\\": 222,[39m
[31m+      \\"f\\": 555,[39m
[2m     },[22m
[2m   },[22m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": 2015-11-30T00:00:00.000Z, "b": "b"}).toMatchObject({"a": 2015-10-10T00:00:00.000Z}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": 2015-10-10T00:00:00.000Z}[39m
Received:
  [31m{\\"a\\": 2015-11-30T00:00:00.000Z, \\"b\\": \\"b\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": 2015-10-10T00:00:00.000Z,[39m
[31m+  \\"a\\": 2015-11-30T00:00:00.000Z,[39m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": null, "b": "b"}).toMatchObject({"a": "4"}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": \\"4\\"}[39m
Received:
  [31m{\\"a\\": null, \\"b\\": \\"b\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": \\"4\\",[39m
[31m+  \\"a\\": null,[39m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": null, "b": "b"}).toMatchObject({"a": undefined}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": undefined}[39m
Received:
  [31m{\\"a\\": null, \\"b\\": \\"b\\"}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": undefined,[39m
[31m+  \\"a\\": null,[39m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({"a": undefined}).toMatchObject({"a": null}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": null}[39m
Received:
  [31m{\\"a\\": undefined}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[2m Object {[22m
[32m-  \\"a\\": null,[39m
[31m+  \\"a\\": undefined,[39m
[2m }[22m"
`;

exports[`toMatchObject() {pass: false} expect({}).toMatchObject({"a": undefined}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m{\\"a\\": undefined}[39m
Received:
  [31m{}[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[32m-Object {[39m
[32m-  \\"a\\": undefined,[39m
[32m-}[39m
[31m+Object {}[39m"
`;

exports[`toMatchObject() {pass: false} expect(2015-11-30T00:00:00.000Z).toMatchObject(2015-10-10T00:00:00.000Z) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32m2015-10-10T00:00:00.000Z[39m
Received:
  [31m2015-11-30T00:00:00.000Z[39m
Difference:
[32m- Expected[39m
[31m+ Received[39m

[32m-2015-10-10T00:00:00.000Z[39m
[31m+2015-11-30T00:00:00.000Z[39m"
`;

exports[`toMatchObject() {pass: false} expect(Set {1, 2}).toMatchObject(Set {2, 1}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value to match object:
  [32mSet {2, 1}[39m
Received:
  [31mSet {1, 2}[39m
Difference:
[2mCompared values have no visual difference.[22m"
`;

exports[`toMatchObject() {pass: true} expect([1, 2]).toMatchObject([1, 2]) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m[1, 2][39m
Received:
  [31m[1, 2][39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": "b", "c": "d"}).toMatchObject({"a": "b", "c": "d"}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": \\"b\\", \\"c\\": \\"d\\"}[39m
Received:
  [31m{\\"a\\": \\"b\\", \\"c\\": \\"d\\"}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": "b", "c": "d"}).toMatchObject({"a": "b"}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": \\"b\\"}[39m
Received:
  [31m{\\"a\\": \\"b\\", \\"c\\": \\"d\\"}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": "b", "t": {"x": {"r": "r"}, "z": "z"}}).toMatchObject({"a": "b", "t": {"z": "z"}}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": \\"b\\", \\"t\\": {\\"z\\": \\"z\\"}}[39m
Received:
  [31m{\\"a\\": \\"b\\", \\"t\\": {\\"x\\": {\\"r\\": \\"r\\"}, \\"z\\": \\"z\\"}}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": "b", "t": {"x": {"r": "r"}, "z": "z"}}).toMatchObject({"t": {"x": {"r": "r"}}}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"t\\": {\\"x\\": {\\"r\\": \\"r\\"}}}[39m
Received:
  [31m{\\"a\\": \\"b\\", \\"t\\": {\\"x\\": {\\"r\\": \\"r\\"}, \\"z\\": \\"z\\"}}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": [{"a": "a", "b": "b"}]}).toMatchObject({"a": [{"a": "a"}]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": [{\\"a\\": \\"a\\"}]}[39m
Received:
  [31m{\\"a\\": [{\\"a\\": \\"a\\", \\"b\\": \\"b\\"}]}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": [3, 4, 5, "v"], "b": "b"}).toMatchObject({"a": [3, 4, 5, "v"]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": [3, 4, 5, \\"v\\"]}[39m
Received:
  [31m{\\"a\\": [3, 4, 5, \\"v\\"], \\"b\\": \\"b\\"}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": [3, 4, 5], "b": "b"}).toMatchObject({"a": [3, 4, 5]}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": [3, 4, 5]}[39m
Received:
  [31m{\\"a\\": [3, 4, 5], \\"b\\": \\"b\\"}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": {"x": "x", "y": "y"}}).toMatchObject({"a": {"x": Any<String>}}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": {\\"x\\": Any<String>}}[39m
Received:
  [31m{\\"a\\": {\\"x\\": \\"x\\", \\"y\\": \\"y\\"}}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": 1, "c": 2}).toMatchObject({"a": Any<Number>}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": Any<Number>}[39m
Received:
  [31m{\\"a\\": 1, \\"c\\": 2}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": 2015-11-30T00:00:00.000Z, "b": "b"}).toMatchObject({"a": 2015-11-30T00:00:00.000Z}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": 2015-11-30T00:00:00.000Z}[39m
Received:
  [31m{\\"a\\": 2015-11-30T00:00:00.000Z, \\"b\\": \\"b\\"}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": null, "b": "b"}).toMatchObject({"a": null}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": null}[39m
Received:
  [31m{\\"a\\": null, \\"b\\": \\"b\\"}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": undefined, "b": "b"}).toMatchObject({"a": undefined}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": undefined}[39m
Received:
  [31m{\\"a\\": undefined, \\"b\\": \\"b\\"}[39m"
`;

exports[`toMatchObject() {pass: true} expect({"a": undefined}).toMatchObject({"a": undefined}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m{\\"a\\": undefined}[39m
Received:
  [31m{\\"a\\": undefined}[39m"
`;

exports[`toMatchObject() {pass: true} expect(2015-11-30T00:00:00.000Z).toMatchObject(2015-11-30T00:00:00.000Z) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32m2015-11-30T00:00:00.000Z[39m
Received:
  [31m2015-11-30T00:00:00.000Z[39m"
`;

exports[`toMatchObject() {pass: true} expect(Array []).toMatchObject(Array []) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32mArray [][39m
Received:
  [31mArray [][39m"
`;

exports[`toMatchObject() {pass: true} expect(Set {1, 2}).toMatchObject(Set {1, 2}) 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchObject([22m[32mexpected[39m[2m)[22m

Expected value not to match object:
  [32mSet {1, 2}[39m
Received:
  [31mSet {1, 2}[39m"
`;

exports[`toMatchObject() throws expect("44").toMatchObject({}) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[31mreceived[39m value must be an object.
Received:
  string: [31m\\"44\\"[39m"
`;

exports[`toMatchObject() throws expect({}).toMatchObject("some string") 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be an object.
Expected:
  string: [32m\\"some string\\"[39m"
`;

exports[`toMatchObject() throws expect({}).toMatchObject(4) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be an object.
Expected:
  number: [32m4[39m"
`;

exports[`toMatchObject() throws expect({}).toMatchObject(null) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be an object.
Expected: [32mnull[39m"
`;

exports[`toMatchObject() throws expect({}).toMatchObject(true) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be an object.
Expected:
  boolean: [32mtrue[39m"
`;

exports[`toMatchObject() throws expect({}).toMatchObject(undefined) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[32mexpected[39m value must be an object.
Expected: [32mundefined[39m"
`;

exports[`toMatchObject() throws expect(4).toMatchObject({}) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[31mreceived[39m value must be an object.
Received:
  number: [31m4[39m"
`;

exports[`toMatchObject() throws expect(null).toMatchObject({}) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[31mreceived[39m value must be an object.
Received: [31mnull[39m"
`;

exports[`toMatchObject() throws expect(true).toMatchObject({}) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[31mreceived[39m value must be an object.
Received:
  boolean: [31mtrue[39m"
`;

exports[`toMatchObject() throws expect(undefined).toMatchObject({}) 1`] = `
"[2mexpect([22m[31mobject[39m[2m)[.not].toMatchObject([22m[32mexpected[39m[2m)[22m

[31mreceived[39m value must be an object.
Received: [31mundefined[39m"
`;
